[gd_scene load_steps=33 format=2]

[ext_resource path="res://new_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://tutorial.gd" type="Script" id=2]
[ext_resource path="res://NPC.gd" type="Script" id=3]
[ext_resource path="res://eye.gd" type="Script" id=4]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye8.png" type="Texture" id=5]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye7.png" type="Texture" id=6]
[ext_resource path="res://BgArt/Tutorial/sign.png" type="Texture" id=7]
[ext_resource path="res://BgArt/Tutorial/key2.png" type="Texture" id=8]
[ext_resource path="res://BgArt/Tutorial/move3.png" type="Texture" id=9]
[ext_resource path="res://BgArt/Tutorial/move4.png" type="Texture" id=10]
[ext_resource path="res://BgArt/Tutorial/move1.png" type="Texture" id=11]
[ext_resource path="res://BgArt/Tutorial/move2.png" type="Texture" id=12]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye6.png" type="Texture" id=13]
[ext_resource path="res://BgArt/Tutorial/key1.png" type="Texture" id=14]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye5.png" type="Texture" id=15]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye2.png" type="Texture" id=16]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye4.png" type="Texture" id=17]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye3.png" type="Texture" id=18]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye0.png" type="Texture" id=19]
[ext_resource path="res://BgArt/passive_entity/eyeball/eye1.png" type="Texture" id=20]
[ext_resource path="res://BgArt/passive_entity/eyeball/openeye2.png" type="Texture" id=21]
[ext_resource path="res://BgArt/passive_entity/eyeball/openeye3.png" type="Texture" id=22]
[ext_resource path="res://BgArt/passive_entity/eyeball/openeye1.png" type="Texture" id=23]
[ext_resource path="res://BgArt/passive_entity/eyeball/iris.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 8 ) ],
"loop": true,
"name": "buttons",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "text",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 102.376, 61.6496 )

[sub_resource type="Animation" id=4]
resource_name = "popup_text"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Ttext:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -569.317, -115.796 ), Vector2( -569, 98.581 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ttext:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 3.86375 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ttext:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 4 ),
"update": 0,
"values": [ Vector2( 0.555, 0.555 ), Vector2( 0.0738825, 0.54039 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Ttext:visible")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Tkeys:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -561.303, -10.8281 ), Vector2( -567, 116.492 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Tkeys:rotation_degrees")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Tkeys:scale")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.55525, 0.55525 ), Vector2( 0.0673184, 0.0981997 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Tkeys:visible")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "open",
"speed": 8.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "focus",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "blink",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 89.0546, 151.947 )

[sub_resource type="Animation" id=7]
resource_name = "Confused"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.15845, 9.71301 ), Vector2( -2.15845, 9.71301 ), Vector2( 30.3767, 9.71301 ), Vector2( 30.3767, 9.71301 ), Vector2( -31.2689, 2.86349 ), Vector2( -31.2689, 2.86349 ), Vector2( -0.446167, 14.8501 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 74.803, 76.0345 )

[node name="passive" type="Node2D"]
position = Vector2( -10, 0 )

[node name="scene1" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Tkeys" type="AnimatedSprite" parent="scene1"]
position = Vector2( -561.303, -10.8281 )
scale = Vector2( 0.55525, 0.55525 )
frames = SubResource( 1 )
animation = "buttons"
playing = true

[node name="Ttext" type="AnimatedSprite" parent="scene1"]
position = Vector2( -569.317, -115.796 )
scale = Vector2( 0.555, 0.555 )
frames = SubResource( 2 )
animation = "text"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="scene1"]
position = Vector2( -627.442, -5.02191 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene1/Area2D"]
position = Vector2( 69.7172, 139.434 )
shape = SubResource( 3 )

[node name="sign" type="Sprite" parent="scene1/Area2D"]
position = Vector2( 35.8281, 157.009 )
texture = ExtResource( 7 )

[node name="popup" type="AnimationPlayer" parent="scene1"]
anims/popup_text = SubResource( 4 )

[node name="eyes" type="Node2D" parent="scene1"]

[node name="eye" type="AnimatedSprite" parent="scene1/eyes"]
position = Vector2( 1525.08, 23.0688 )
frames = SubResource( 5 )
animation = "blink"
frame = 5
script = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="scene1/eyes/eye"]
position = Vector2( 25.3517, 28.5207 )

[node name="begin_eye" type="CollisionShape2D" parent="scene1/eyes/eye/Area2D"]
position = Vector2( -229.794, 57.3151 )
shape = SubResource( 6 )

[node name="to_blink" type="Timer" parent="scene1/eyes/eye"]
wait_time = 3.0
one_shot = true

[node name="iris_handle" type="KinematicBody2D" parent="scene1/eyes/eye"]
position = Vector2( -2.15845, 9.71301 )

[node name="iris" type="Sprite" parent="scene1/eyes/eye/iris_handle"]
position = Vector2( -239.02, -16.4759 )
texture = ExtResource( 25 )

[node name="iris2" type="Sprite" parent="scene1/eyes/eye/iris_handle"]
position = Vector2( 226.53, -19.4229 )
texture = ExtResource( 25 )

[node name="saccadic" type="AnimationPlayer" parent="scene1/eyes/eye/iris_handle"]
anims/Confused = SubResource( 7 )

[node name="NPC" type="KinematicBody2D" parent="."]
position = Vector2( 320.065, -12.6758 )
script = ExtResource( 3 )

[node name="npc2" type="Area2D" parent="NPC"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/npc2"]
position = Vector2( 478.637, 152.028 )
shape = SubResource( 8 )

[node name="Anim" type="AnimatedSprite" parent="NPC"]
position = Vector2( 478.26, 147.687 )
frames = ExtResource( 1 )
frame = 2
playing = true
[connection signal="body_entered" from="scene1/Area2D" to="scene1" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="scene1/Area2D" to="scene1" method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="scene1/popup" to="scene1" method="_on_popup_animation_finished"]
[connection signal="animation_finished" from="scene1/eyes/eye" to="scene1/eyes/eye" method="_on_eye_animation_finished"]
[connection signal="body_entered" from="scene1/eyes/eye/Area2D" to="scene1/eyes/eye" method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="scene1/eyes/eye/iris_handle/saccadic" to="scene1/eyes/eye" method="_on_saccadic_animation_finished"]
[connection signal="body_entered" from="NPC/npc2" to="NPC" method="_on_npc2_body_entered"]
